Updated css to format on mobile correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@ body {
 .header nav {
   background-color: FFF;
   padding: 10px;
-  font-size: 20px;  
-  margin: -40px 10px -30px 20px ;
+  font-size: 20px;
+  margin: -40px 10px -30px 20px;
 }
 
 .header nav ul {
@@ -19,14 +19,13 @@ body {
 
 .header nav ul li {
   display: inline-block;
-  /* margin-right: 10px; */
-  margin: -90px 20px 0px 20px ;
+  margin: -90px 20px 0px 20px;
 }
 
 .header nav ul li a {
   color: #333;
   text-decoration: none;
-  padding: 5px;
+  padding: 50px;
 }
 
 .header nav ul li a:hover {
@@ -37,66 +36,77 @@ body {
 }
 
 #artistInfoSection,
-#videoSection{
+#videoSection {
   max-width: 800px;
   margin: 20px auto;
   padding: 0 20px;
 }
 
-
 @media (max-width: 768px) {
   .header {
-    text-align: center; /* Center align the elements in the header */
+    text-align: center;
   }
 
   .header nav {
-    display: inline-block; /* Show the nav as a block */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
   }
 
   .header img {
-    display: block; /* Make the logo image take full width */
-    /* margin: 0 auto; Center the logo image */
-    margin: 30px 90px 65px 100px;
-    height: 120px; /* Adjust the logo height for smaller screens */
+    display: block;
+    margin: 0 auto;
+    height: auto;
+    margin-bottom: 10px;
   }
 
   ul {
-    padding: 20;
-    margin-top: -20px; /* Add some spacing below the logo */
+    padding: 20px;
+    margin-top: -20px;
   }
 
   li {
-    list-style: none; /* Remove the default list style */
+    list-style: none;
   }
 
   li a {
-    display: block; /* Make each navigation link take full width */
-    padding: 10px 0; /* Add some vertical spacing for each link */
+    display: block;
+    padding: 10px 0;
   }
 }
 
-/* Tablet-specific styles */
 @media (min-width: 769px) and (max-width: 1024px) {
-  /* Adjust styles for tablets here */
   img {
-    height: 140px; /* Adjust the logo height for tablet screens */
+    height: 140px;
   }
 }
 
-/* Desktop-specific styles */
 @media (min-width: 1025px) {
-  /* Adjust styles for desktop here */
   img {
-    height: 160px; /* Revert the logo height to the original size for desktop screens */
+    height: 160px;
   }
 
   ul {
-    display: flex; /* Display the navigation links in a row */
-    justify-content: space-between; /* Spread the links horizontally */
+    display: flex;
+    justify-content: space-between;
   }
 
   li {
-    margin: 0 10px; /* Add some spacing between the links */
+    margin: 0 10px;
   }
 }
+
+.search-container input[type="text"] {
+  flex: 1;
+  width: 100%;
+  margin-right: 7rem;
+}
+
+h1.text-3xl {
+  text-align: center;
+}
+
+
+
   
